--- a/lab2.css
+++ b/lab2.css
@@ -6,7 +6,8 @@ h3{color:#b33ab8;text-decoration:underline}
 .respuestaHTML{width:550px;height:190px;border-radius:20px;background-color:#e9ea97;font-style: italic;font-size: 110%}
 .respuestaHTML1{width:550px;height:50px;border-radius:20px;background-color:#e9ea97;font-style: italic;font-size: 120%}
 .respuestaCSS{width:550px;height:100px;border-radius:20px;text-align:center;background-color:#d5e7bc;font-style: italic;font-size: 100%}
-.columnas{width:100%;margin:auto}.columna2{width:22.%;float:left}
+.columnas{width:100%;margin:auto}
+.columna2{width:22.%;float:left}
 footer{position:relative;margin-top:-10px;width:100%;padding:50px;background:#d56ada;clear:both;text-align:center;color:#fff}
 #foto{padding:20px;margin:15px;border:2px solid #ff0;float:right;width:200px}
 ul, li   { margin-left: 20px }
