implementacion de funciones

--- a/Lab6_POO/styles.css
+++ b/Lab6_POO/styles.css
@@ -1,3 +1,4 @@
 #matricula{text-align: right; background-color: aqua;}
 h1{text-align: center}
 footer{background-color: aqua}
+#card-title:hover{text-align:center;color:black}
