--- a/Lab6_POO/styles.css
+++ b/Lab6_POO/styles.css
@@ -1,4 +1,4 @@
 #matricula{text-align: right; background-color: aqua;}
-h1{text-align: center}
+h3{text-align: center; font-size: small; font-style: italic;}
 footer{background-color: aqua}
 #card-title:hover{text-align:center;color:black}
