--- a/Lab6_POO/styles.css
+++ b/Lab6_POO/styles.css
@@ -2,3 +2,5 @@
 h3{text-align: center; font-size: small; font-style: italic;}
 footer{background-color: aqua}
 #card-title:hover{text-align:center;color:black}
+#contra1:hover{color:red; font-style: italic;}
+#contra2:hover{color:red; font-style: italic;}
