trabajando en arreglos

--- a/Lab12_HTMLDinamico/views/agregarAnimal.ejs
+++ b/Lab12_HTMLDinamico/views/agregarAnimal.ejs
@@ -2,7 +2,7 @@
     <h1 id="principal">Este sitio es de animales favoritos</h1>
     <h2><%= nombre %> Nuevo animal favorito:</h2>
     <form action="/mod2/agregarAnimal" method="POST">
-        <label for="nombre">Animal: </label>
+        <label for="animal">Animal: </label>
         <input type="text" id="animal" name="animal" placeholder="Perro">
         <br><br>
         <input type="submit" value="Enviar">
