--- a/Lab12_HTMLDinamico/views/comidaFavorita.ejs
+++ b/Lab12_HTMLDinamico/views/comidaFavorita.ejs
@@ -2,7 +2,7 @@
     <h1 id="principal">Este sitio es de platillos favoritos</h1>
     <h2><%= nombre %> Nuevo platillo favorito:</h2>
     <form action="/mod1/comidaFavorita" method="POST">
-        <label for="nombre">Platillo: </label>
+        <label for="platillo">Platillo: </label>
         <input type="text" id="platillo" name="platillo" placeholder="Curry">
         <br><br>
         <input type="submit" value="Enviar">
