--- a/Lab12_HTMLDinamico/views/inicio.ejs
+++ b/Lab12_HTMLDinamico/views/inicio.ejs
@@ -2,7 +2,7 @@
     <h1 id="principal">Mis cosas favoritas</h1>
     <p>En los siguientes links encontraras 4 diferentes listas</p>
     <br><br>
-    <a href="/mod1"><button type="button">Lista de colores y comida </button></a>
+    <a href="/mod1/colorFavorito"><button type="button">Lista de colores y comida </button></a>
     <br><br>
-    <a href="/mod2"><button type="button">Lista de animales y peliculas </button></a>
+    <a href="/mod2/agregarAnimal"><button type="button">Lista de animales y peliculas </button></a>
 <%- include('includes/foot.ejs') %>
