--- a/Lab12_HTMLDinamico/views/peliculaFavorita.ejs
+++ b/Lab12_HTMLDinamico/views/peliculaFavorita.ejs
@@ -1,6 +1,11 @@
 <%- include('includes/head.ejs') %>
     <h1 id="principal">Este sitio es de peliculas favoritas</h1>
-    <h2><%= nombre %> Nueva pelicula favorito:</h2>
+    <!-- % sacar color del arreglo colores -->
+    <% for (let pelicula of peliculas) { %>
+        <p><%= pelicula %></p> 
+        <!-- %= insertar un valor -->
+    <% } %>
+    <h2> Nueva pelicula favorito:</h2>
     <form action="/mod2/peliculaFavorita" method="POST">
         <label for="nombre">Pelicula: </label>
         <input type="text" id="pelicula" name="pelicula" placeholder="Up">
