trabajando en errores

--- a/Lab14_Cookies/views/colorFavorito.ejs
+++ b/Lab14_Cookies/views/colorFavorito.ejs
@@ -5,7 +5,7 @@
         <p><%= color.nombre %></p> 
         <!-- %= insertar un valor -->
     <% } %>
-    <h2> Nuevo color favorito:</h2>
+    <h2><%= username %>, Aqui encuentras mis colores favoritos:</h2>
     <form action="/mod1/colorFavorito" method="POST">
         <!-- mandar a post∫ -->
         <label for="color">Color: </label>
