--- a/Lab14_Cookies/views/inicio.ejs
+++ b/Lab14_Cookies/views/inicio.ejs
@@ -7,4 +7,6 @@
     <% } %>
     <br><br>
     <a href="/mod1/colorFavorito"><button type="button">Lista de colores y comida </button></a>
+    <br>
+    <a href="/mod1/colorFavorito"><i class="material-icons">add</i> Agregar un nuevo color</a>
 <%- include('includes/foot.ejs') %>
