--- a/Lab14_Cookies/views/includes/head.ejs
+++ b/Lab14_Cookies/views/includes/head.ejs
@@ -9,6 +9,10 @@
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta charset="utf-8">
+    <% if (username != ' ') { %>
+        <li><%= username %></li>
+        <li><a href="/users/logout">Salir</a></li>
+    <% } %>
     <h1>Lab12</h1>
     <title>Mis Listas</title>
 </head>
