push erroneo, lab no completo, solo notas

--- a/Lab14_Cookies/views/inicio.ejs
+++ b/Lab14_Cookies/views/inicio.ejs
@@ -9,4 +9,4 @@
     <a href="/mod1/colorFavorito"><button type="button">Lista de colores y comida </button></a>
     <br>
     <a href="/mod1/colorFavorito"><i class="material-icons">add</i> Agregar un nuevo color</a>
-<%- include('includes/foot.ejs') %>
+<%- include('includes/foot.ejs') %>©
