--- a/Lab14_Cookies/views/login.ejs
+++ b/Lab14_Cookies/views/login.ejs
@@ -1,5 +1,5 @@
 <%- include('includes/head.ejs') %>
-    <h1 id="principal">Este sitio es de capybaras</h1>
+    <h1 id="principal">Este sitio es de mis colores favoritos</h1>
     <h2>Para ingresar al sitio, introduce tus datos de acceso:</h2>
     <form action="/users/login" method="POST">
         <label for="username">Nombre de usuario: </label>
