--- a/Lab18/views/includes/head.ejs
+++ b/Lab18/views/includes/head.ejs
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 <html lang="es-mx">
+  <body>
   <nav class="navbar navbar-light bg-light">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">
         <img src="https://pbs.twimg.com/media/EvfUkPJXYAMpNSI.jpg" alt="" width="30" height="24" class="d-inline-block align-text-top">
-        Bootstrap
+        BellosAnimales
       </a>
+      <% if (username != '') { %>
+        <li><%= username %></li>
+        <li><a href="/users/logout">Salir</a></li>
+    <% } %>
     </div>
   </nav>
-<div class="container"></div>
+  </body>
