conexion con base de datos

--- a/Lab18/views/lista.ejs
+++ b/Lab18/views/lista.ejs
@@ -15,6 +15,9 @@
           </div>
        <%} %>
     </ul>
+    <% if (ultimo_animal != '') { %>
+        <p>El último animal agregado fue: <%= ultimo_animal %></p>
+    <% } %>
     <br>
     <a href="animales/nuevoAnimal"><button type="button" class="btn btn-outline-secondary">Agregar un nuevo Animal</button></a>
     <br><br>
