--- a/Lab18/views/nuevo.ejs
+++ b/Lab18/views/nuevo.ejs
@@ -1,9 +1,15 @@
 <%- include('includes/head.ejs') %>
     <h1 id="principal">Los animales más bontios</h1>
     <h2><%= username %>Animales:</h2>
+    <!--Lo que se va a desplegar cuando vayan a agregar un neuvo animal-->
     <form action="/animales/nuevoAnimal" method="POST"> 
+        <!--Es acorde a las columnas de nuestra bd-->
         <label for="nombre">Nombre: </label>
-        <input type="text" id="nombre" name="nombre" placeholder="Perro">
+        <input type="text" id="nombre" name="nombre" placeholder="Pez">
+        <label for="descripcion">Descipción: </label>
+        <input type="text" id="descripcion" name="descripcion" placeholder="Viven en el mar">
+        <label for="Imagen">Imagen: </label>
+        <input type="text" id="imagen" name="imagen" placeholder="https://s2.coinmarketcap.com/static/img/coins/200x200/16636.png">
         <br><br>
         <a href="/animales"><input type ="submit" value="Enviar"></a>
     </form>
