--- a/Lab18/views/login.ejs
+++ b/Lab18/views/login.ejs
@@ -3,11 +3,12 @@
     <h2>Para ingresar al sitio, introduce tus datos de acceso:</h2>
     <form action="/users/login" method="POST">
         <label for="username">Nombre de usuario: </label>
-        <input type="text" id="username" name="username" placeholder="Pedro">
+        <input type="text" id="username" name="username" placeholder="Denisse">
         <label for="password">Contraseña: </label>
         <input type="password" id="password" name="password">
         <br><br>
-        <input type="submit" value="Enviar">
+        <input type="submit" value="Ingresar">
     </form>
+    <a href="/users/signup"><button type="button">Signup</button></a>
     <br><br>
 <%- include('includes/foot.ejs') %>
