--- a/Lab18/views/signup.ejs
+++ b/Lab18/views/signup.ejs
@@ -2,6 +2,7 @@
     <h1 id="principal">Este sitio es exclusivo de animales bellos</h1>
     <h2>Registrate:</h2>
     <form action="/users/signup" method="POST">
+        <input type="hidden" name="_csrf" value="<%= csrfToken %>" >
         <label for="nombre">Nombre completo: </label>
         <input type="text" id="nombre" name="nombre" >
         <label for="username">Nombre de usuario: </label>
